Fix text overflow in Source Interface replies
Switched "word-wrap" to "overflow-wrap".

--- a/securedrop/sass/source.sass
+++ b/securedrop/sass/source.sass
@@ -143,7 +143,7 @@ p#codename
     margin-bottom: 1em
     border-radius: 5px
     position: relative
-    word-wrap: break-word
+    overflow-wrap: break-word
 
     &:dir(rtl)
       text-align: right
